--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -40,6 +40,14 @@ jobs:
     - run: npm audit || true
     - run: npm audit fix --force
     - run: npm audit
+  sast:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Bearer
+      uses: bearer/bearer-action@v2
+
   
 
    
